fix: Controller에 gs와 관련된 내용 모두 제거 및 패키지 device로 이동